Fixes login fields truncated on IE9

--- a/web-ui/src/main/resources/catalog/style/gn_search_geocat.less
+++ b/web-ui/src/main/resources/catalog/style/gn_search_geocat.less
@@ -79,6 +79,10 @@ h1, h2, h3, h4, h5, h6,
     input, button, select {
       height:24px;
     }
+    input {
+      padding: 0 10px;
+      line-height: 24px;
+    }
     select {
       padding-top: 3px;
     }
